<resources>
    <string name="app_name">Stages Demo</string>
    <string name="view_source_code">View Source Code</string>
    <string name="get_started">Get Started</string>
    <string name="amazon_ivs_stages_demo">Amazon IVS Stages Demo</string>
    <string name="app_description">This demo app demonstrates how to use Amazon IVS Stages to broadcast a video call.</string>
    <string name="smiles_image_description">Smiles image</string>
    <string name="introduce_yourself">Introduce yourself</string>
    <string name="your_name">Your name</string>
    <string name="select_avatar">Select avatar</string>
    <string name="create_a_new_stage">Create a new stage</string>
    <string name="watch_or_join_an_existing_stage">Watch or join an existing stage</string>
    <string name="stage_participants">Stage Participants</string>
    <string name="no_participants">No participants</string>
    <string name="invite_users_description">Invite a user to view and manage their participant details</string>
    <string name="invite_participants">Invite participants</string>
    <string name="on_stage">On stage</string>
    <string name="close_bottom_sheet_button_description">Close participants sheet image-button</string>
    <string name="invite_users">Invite users</string>
    <string name="remove_user_description">When you remove a user from the stage, they won\'t be able to join until they are invited again.</string>
    <string name="stages">Stages</string>
    <string name="all_stages">All stages</string>
    <string name="invite">Invite</string>
    <string name="invite_up_to_3_users">Invite up to 3 users</string>
    <string name="test_users">Test users</string>
    <string name="test_users_description">Invite test users to preview how your stage will look with multiple participants.</string>
    <string name="online_users">Online users</string>
    <string name="select_users_to_invite">Select users to invite</string>
    <string name="online_users_description">Launch this app on another device and select <b>Watch or join an existing stage</b> to be visible in the online users list.</string>
    <string name="ignore">Ignore</string>
    <string name="continue_str">Continue</string>
    <string name="continue_removing_template">Continue removing %1$s from the stage? They won\'t be able to join until they are invited again.</string>
    <string name="say_something">Say something…</string>
    <string name="no_broadcast_available">No broadcast available</string>
    <string name="no_broadcast_description">A broadcast for this stage is not available. You can still request to join the stage</string>
    <string name="request_to_join_stage">Request to join stage</string>
    <string name="snack_bar_ok">OK</string>
    <string name="success">Success</string>
    <string name="stage_created">Stage Created</string>
    <string name="stage_joined">Stage Joined</string>
    <string name="error_happened">Error happened</string>
    <string name="invited_to_stage_description">You will be able to preview your video and audio before anyone can see or hear you.</string>
    <string name="user_invited_you_template">%1$s has invited you to join their stage</string>
    <string name="invite_users_template">Invite %1$d participants</string>
    <string name="confirm_removal">Confirm removal</string>
    <string name="yes_remove">Yes, remove</string>
    <string name="cancel">Cancel</string>
    <string name="continue_removing_all_participants">Continue removing all participants from the stage? Removed participants won\'t be able to join until they are invited again.</string>
    <string name="yes_remove_all">Yes, remove all</string>
    <string name="request_to_join_button">request to join button</string>
    <string name="request_to_join_stage_template">Request to join User %1$s\'s Stage?</string>
    <string name="request_to_join_stage_subtitle_template">If User %1$s accepts, everybody watching the stream will be able to see and hear you.</string>
    <string name="no_stages_available">No stages are available\n Create a new stage to get started.</string>
    <string name="send_request">Send request</string>
    <string name="sign_in">Sign in</string>
    <string name="join">Join</string>
    <string name="preview_title">This is how you\'ll look and sound</string>
    <string name="start_streaming">Start Streaming</string>
    <string name="stop_streaming">Stop Streaming</string>
    <string name="stage_disconnected">Disconnected from stage!</string>
    <string name="copy_playback_url">Copy playback URL</string>
    <string name="copy_playback_template">https://debug.ivsdemos.com/?p=ivs&amp;url=%1$s&amp;d=169&amp;l=</string>
    <string name="stage_self_name">Your Stage</string>
    <string name="stage_name">%1$s\'s Stage</string>
    <string name="how_you_will_look_and_sound">How you will look and sound</string>
    <string name="participant_self">%1$s (You)</string>
</resources>
