<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/stage_padding_medium">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/get_started_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="82dp"
            android:layout_height="152dp"
            android:layout_marginBottom="@dimen/stage_margin_big"
            android:contentDescription="@string/smiles_image_description"
            android:src="@drawable/ic_smiles" />

        <TextView
            style="@style/TextStyle.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amazon_ivs_stages_demo"
            android:textColor="@color/stage_white" />

        <TextView
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/app_description" />

    </LinearLayout>

    <TextView
        android:id="@+id/get_started_button"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/stage_size_medium"
        android:text="@string/get_started"
        app:layout_constraintBottom_toTopOf="@id/source_code_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/source_code_button"
        style="@style/ButtonStyle.Secondary"
        android:layout_width="0dp"
        android:layout_height="@dimen/stage_size_medium"
        android:text="@string/view_source_code"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
