<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/stages_title"
        style="@style/TextStyle.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/stage_margin_medium"
        android:layout_marginTop="@dimen/stage_margin_medium"
        android:text="@string/stages"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/stages_refresh_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/create_stage_button"
        android:layout_marginTop="@dimen/stage_margin_medium"
        android:layout_marginBottom="@dimen/stage_margin_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stages_title">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/stages_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="@dimen/stage_margin_small"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="30"
            tools:listitem="@layout/item_stage_list" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/no_stages_found_label"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_stages_available"
        android:textAlignment="center"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/create_stage_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stages_title" />

    <TextView
        android:id="@+id/create_stage_button"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/stage_size_medium"
        android:layout_marginHorizontal="@dimen/stage_margin_medium"
        android:layout_margin="@dimen/stage_margin_medium"
        android:text="@string/create_a_new_stage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <include
        android:id="@+id/create_stage_progress_bar"
        layout="@layout/view_progress_bar_with_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
